added end date to previous blog post

--- a/blog/_posts/2022-02-17-zzbrowse.md
+++ b/blog/_posts/2022-02-17-zzbrowse.md
@@ -2,6 +2,7 @@
 title: ZZBrowse
 author: Sven Redsun
 date: 2022-02-17
+end_date: 2023-02-17
 summary: ZZBrowse is an interactive R/Shiny web application for GWAS and QTL visualization. In this post, we describe our enhancements to the original ZBrowse developed by the Baxter Laboratory.
 ---
 [ZZBrowse](https://zzbrowse.legumeinfo.org) is an interactive R/Shiny web application for GWAS and QTL visualization. In this post, we describe our enhancements to the original [ZBrowse](https://github.com/baxterlabZbrowse/ZBrowse) developed by the [Baxter Laboratory](https://www.baxterlab.org/untitled-cqi0). (For an overview of its basic functionality, please refer to the landing page.)
