fixed CROPS post

--- a/events/_posts/2024-06-03-CROPS.md
+++ b/events/_posts/2024-06-03-CROPS.md
@@ -6,4 +6,4 @@ end_date: 2024-06-06
 summary: CROPS Conference 2024 03-06 June, 2024, Huntville, AL
 ---
 03 - 06 June 2024:
-[CROP Conference 2024](https://www.hudsonalpha.org/crops/), Huntville, AL
+[CROPS Conference 2024](https://www.hudsonalpha.org/crops/), Huntville, AL
