trying to get date on a new line

--- a/events/_posts/2025-01-10-PAG32.md
+++ b/events/_posts/2025-01-10-PAG32.md
@@ -5,5 +5,6 @@ author: Jacqueline Campbell
 end_date: 2025-01-15
 summary: Plant & Animal Genome Conference (PAG32) 10-15 January, 2025, San Diego, CA
 ---
-<br>10 - 15 January 2025:
+
+10 - 15 January 2025:
 [PAG 32](https://www.intlpag.org), San Diego, CA
