--- a/events/_posts/2025-07-23-Soy2025.md
+++ b/events/_posts/2025-07-23-Soy2025.md
@@ -5,5 +5,6 @@ author: Jacqueline Campbell
 end_date: 2025-01-15
 summary: Cellular and Molecular Biology of the Soybean (Soy2025) 23 - 25, July, 2025, Madison, WI
 ---
-<br>July 23 - 25, 2025:
+
+July 23 - 25, 2025:
 [Soy2025](https://conferences.union.wisc.edu/soy2025/), Madison WI
