--- a/news/_posts/2024-10-01-new-sb.md
+++ b/news/_posts/2024-10-01-new-sb.md
@@ -1,14 +1,12 @@
 ---
 layout: news-item
-title:  New SoyBase Website & Legacy available
+title:  New SoyBase Website
 author: Jacqueline Campbell
 date:  2024-10-01
 end_date: 2024-11-01
-summary: Welcome to new SoyBase
+summary: Welcome to New SoyBase
 categories: general    
 ---
-
-**New SoyBase**
 
 SoyBase has transited the a new website. After the tranisition, we ask the community to please notify the <a href="https://soybase.org/about/" target="_blank">SoyBase team</a> if any issues are found. We appreciate the communities feedback and help as SoyBase makes the transition to the new site.
 
