--- a/news/_posts/2024-10-01-new-sb.md
+++ b/news/_posts/2024-10-01-new-sb.md
@@ -4,7 +4,7 @@ title:  New SoyBase Website
 author: Jacqueline Campbell
 date:  2024-10-01
 end_date: 2024-11-01
-summary: Welcome to New SoyBase
+summary: Welcome to the New SoyBase
 categories: general    
 ---
 
