--- a/events/_posts/2025-03-31-AGBT-Ag-2025.md
+++ b/events/_posts/2025-03-31-AGBT-Ag-2025.md
@@ -3,7 +3,11 @@ layout: event
 title: AGBT-Ag 2025
 author: Jacqueline Campbell
 end_date: 2025-04-2
-summary: Advances in Genome Biology and Technology Agricultural Meeting (AGBT-Ag 2025) March 31 - April 2, 2025 Orlando, FL
+summary: AGBT-Ag 2025 
 ---
-March 31 - April 2, 2025:
-[AGBT-Ag 2025](https://www.agbt.org/home/home/agricultural-meeting-overview/), Orlando, FL
+<h1 class="uk-heading-divider"></h1>
+Advances in Genome Biology and Technology Agricultural Meeting
+
+Date: March 31 - April 2, 2025
+Location: Orlando, FL
+Website: [AGBT-Ag 2025](https://www.agbt.org/home/home/agricultural-meeting-overview/)
