Format event posts

--- a/events/_posts/2025-03-31-AGBT-Ag-2025.md
+++ b/events/_posts/2025-03-31-AGBT-Ag-2025.md
@@ -3,11 +3,10 @@ layout: event
 title: AGBT-Ag 2025
 author: Jacqueline Campbell
 end_date: 2025-04-2
-summary: AGBT-Ag 2025 
+summary: Advances in Genome Biology and Technology Agricultural Meeting
 ---
 <h1 class="uk-heading-divider"></h1>
-Advances in Genome Biology and Technology Agricultural Meeting
-
-Date: March 31 - April 2, 2025
-Location: Orlando, FL
-Website: [AGBT-Ag 2025](https://www.agbt.org/home/home/agricultural-meeting-overview/)
+<ul class="uk-list">
+    <li>Location: Orlando, FL</li>
+    <li><a href="https://www.agbt.org/home/home/agricultural-meeting-overview/" target="_blank">Meeting website</a></li>
+</ul>
