--- a/events/_posts/2025-02-17-SBW2025.md
+++ b/events/_posts/2025-02-17-SBW2025.md
@@ -3,7 +3,10 @@ layout: event
 title: SBW2025
 author: Jacqueline Campbell
 end_date: 2025-02-19
-summary: Soybean Breeders' Workshop - Pathology and Breeding Innovations (SBW2025) February 17 - 19, 2025 St. Louis, MO
+summary: Soybean Breeders' Workshop - Pathology and Breeding Innovations 
 ---
-February 17 - 19 2025:
-[SBW2025](/community/sbw/registration.html), Hilton St. Louis Frontenac, St. Louis, MO
+<h1 class="uk-heading-divider"></h1>
+<ul class="uk-list">
+    <li><a href="/community/sbw/registration.html">General meeting information</a></li>
+    <li>NEW Location: Hilton St. Louis Frontenac, St. Louis, MO</li>
+</ul>
