--- a/events/_posts/2025-01-10-PAG32.md
+++ b/events/_posts/2025-01-10-PAG32.md
@@ -1,9 +1,9 @@
 ---
 layout: event
-title: International Plant & Animal Genome Conference 
+title: PAG32
 author: Jacqueline Campbell
 end_date: 2025-01-15
-summary: Plant & Animal Genome Conference (PAG32) 
+summary: International Plant & Animal Genome Conference 
 ---
 <h1 class="uk-heading-divider"></h1>
 <ul class="uk-list">
