--- a/news/_posts/2025-03-25-SBW2026.md
+++ b/news/_posts/2025-03-25-SBW2026.md
@@ -7,6 +7,7 @@ end_date: 2026-02-18
 summary: 2026 Soybean Breeders' Workshop Theme Announced
 categories: general    
 ---
-
-The theme for the 2026 Soybean Breeders' Workshop Theme is Physiology and Breeding Innovations.
-More information will be posted on SoyBase when it is available.
+<div class="uk-panel">
+  <img class="uk-align-right uk-margin-remove" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="300" alt="Soybean Breeder's Workshop">
+    <p>The theme for the 2026 Soybean Breeders' Workshop Theme is <b>Physiology and Breeding Innovations</b>. <br /><br /> More information will be posted on SoyBase when it is available.</p>
+</div>
