--- a/news/_posts/2025-04-02-Soy2025-abstracts.md
+++ b/news/_posts/2025-04-02-Soy2025-abstracts.md
@@ -4,15 +4,15 @@ title:  Soy2025 Abstract Deadline
 author: Jacqueline Campbell
 date:  2025-04-02
 end_date: 2025-06-16
-summary: Soy2025 Abstract Submission Deadline
+summary: The submission deadline for abstracts to be considered for a talk is April 15, 2025.
 categories: general    
 ---
-<div class="uk-panel">
-  <img class="uk-align-center uk-margin-remove" src="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/2025/Soy2025_LogoWithText.png" width="1-37" height="300" alt="Soy2025: Biennial Conference on Molecular & Celluar Biology of Soybean">
+
+  <img src="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/2025/Soy2025_LogoWithText.png" width="1037" height="300" alt="Soy2025: Biennial Conference on Molecular & Celluar Biology of Soybean">
+<br/><br/>
   <ul class="uk-list uk-list-square uk-list-primary">
-    <li>The submission deadline for abstracts to be considered for a talk is <b>April 15, 2025</b>.</li>
     <li>At Soy2025, 12 open-submission abstracts will be invited to make an oral presentation and the majority of submitted abstracts authors will be invited to present a poster.</li>
     <li>Note that poster sessions will receive strong emphasis and significant time at this meeting.</li>
-    <li>The submission deadline for abstracts to be included in the program book is June 16, 2025.</li>
+    <li>The submission deadline for abstracts to be included in the program book is <b>June 16, 2025</b>.</li>
+    <li>Information about <a href="https://conferences.union.wisc.edu/soy2025/abstracts/">abstract submission</a>.</li>
   </ul>
-</div>
