update SBW webpages

--- a/news/_posts/2025-11-21-SBW2026.md
+++ b/news/_posts/2025-11-21-SBW2026.md
@@ -1,17 +1,25 @@
 ---
-layout: event
-title: SBW2026
+layout: news-item
+title:  SBW2026 Registration Open!
 author: Jacqueline Campbell
-end_date: 2026-02-18
-summary: Soybean Breeders' Workshop - Abiotic Stress and Breeding Innovations 
+date:  2025-11-21
+end_date: 2026-01-01
+summary: Registration and abstract submission for the 2026 SBW is open.
+categories: general    
 ---
+
 <h1 class="uk-heading-divider"></h1>
-<ul class="uk-list">
-    <li>When: February 16-18, 2026</li>
-    <li>Where: Hilton St. Louis Frontenac, St. Louis, MO</li>
-</ul>
+
+<div class="uk-panel">
+  <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder's Workshop Logo">
+  <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
+  <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
+  <br>
+  <a href="/community/sbw/registration.html">Information about 2026 Soybean Breeder's Workshop</a>
+</div>
+
+<b>New for 2026:</b>
 <ul class="uk-list uk-list-disc">
-    <li><a href="/community/sbw/registration.html">Information about 2026 Soybean Breeder's Workshop</a></li>
     <li>Theme: Abiotic Stress with sessions in Environmental stress and Nutritional stress</li>
     <li>The Monday Morning Workshop is about Phenotypic Plasticity and Genotype-by-Environment Interaction: Dissection and Prediction</li>
     <li>Abstracts for Graduate Student / Post doc Oral Presentations are due <b>January 12, 2026</b> and chosen presenters will be notified no later than January 16, 2026.</li> 
