--- a/news/_posts/2026-01-08-SBW2026-Update.md
+++ b/news/_posts/2026-01-08-SBW2026-Update.md
@@ -28,4 +28,5 @@ categories: general
 <a class="uk-button uk-button-primary uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
 </p>
 
-<p class="uk-text-lead">Special Note:</p>
+<p>Special Note:</p>
+<p>When you register, be sure to add the poster session to your cart after selecting your registration type (professional or student/postdoc). After you choose payment type and press the Place Order button, following pages contain space to enter poster details at the very bottom before finalizing your registration.</p>
